--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -41,9 +41,28 @@
   color: #888;
 }
 .pup-img {
-  width: 100px;
-  height: 100px;
+  min-width: 200px;
+  height: 200px;
 }
 .player-card {
-  border: 2px red dotted;
+  border: 2px red solid;
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.puppy-container {
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 4rem;
+}
+
+
+h1 {
+  padding: 4rem;
 }
